@@ -1,0 +1,8 @@
+MSYS-1.0.17 Build:2011-04-24 23:39
+Exception: STATUS_ACCESS_VIOLATION at eip=00000000
+eax=6857383C ebx=68573944 ecx=0001B008 edx=000000F4 esi=00000000 edi=685700D4
+ebp=0028FEC8 esp=0028FEAC program=c:\Ruby_Versions_Installed\Ruby_Devkit_Praveen\Ruby_Devkit\bin\lessecho.exe
+cs=0023 ds=002B es=002B fs=0053 gs=002B ss=002B
+Stack trace:
+Frame     Function  Args
+End of stack trace
