@@ -1,5 +1,8 @@
 Change Log
 ==============
+2016/06/17 (IBM_DB adapter 3.0.3, driver 3.0.3)
+  - Fixed issue #59 - Can't Update Binary Files Using 3.0.x (with Ruby 2.1.0 and Rails 4.2.6) 
+  
 2016/05/24 (IBM_DB adapter 3.0.2, driver 3.0.2)
   - Fixed issue #52 - Invalid foreign key ON UPDATE action specified in schema.rb 
   - Fixed issue #59 - Can't Upload Binary Files Using 3.0.x (with Ruby 2.1.0 and Rails 4.2.6) 
